Fix expanded Relevant Coursework sections from overflowing the viewport, fixing the associated image's jarring resize

--- a/src/styles/Education.module.css
+++ b/src/styles/Education.module.css
@@ -1,7 +1,9 @@
 .educationContainer {
-    max-height: 100%;
+    max-height: 70vh;
     width: 100%;
     margin-top: 1rem;
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .educationEntry {
@@ -36,5 +38,12 @@
         padding: 1rem;
         width: 100%;
         background-color: var(--color-foreground);
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .educationContainer {
+        max-height: 100%;
+        overflow-y: visible;
     }
 }
